@@ -8,7 +8,7 @@ import io.kestra.core.runners.AbstractMemoryRunnerTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
-import java.util.HashMap;
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
@@ -18,14 +18,15 @@ public class OutputValuesTest extends AbstractMemoryRunnerTest {
     @Inject
     FlowRepositoryInterface flowRepository;
 
+    @SuppressWarnings("unchecked")
     @Test
     void output() throws Exception {
         Execution execution = runnerUtils.runOne(null, "io.kestra.tests", "output-values");
 
         assertThat(execution.getState().getCurrent(), is(State.Type.SUCCESS));
         assertThat(execution.getTaskRunList(), hasSize(1));
-        TaskRun outputValues = execution.getTaskRunList().get(0);
-        HashMap<String, String> values = (HashMap<String, String>) outputValues.getOutputs().get("values");
+        TaskRun outputValues = execution.getTaskRunList().getFirst();
+        Map<String, String> values = (Map<String, String>) outputValues.getOutputs().get("values");
         assertThat(values.get("output1"), is("xyz"));
         assertThat(values.get("output2"), is("abc"));
     }
