@@ -120,7 +120,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
     }
 
     @Override
-    public Optional<Execution> findById(String tenantId, String id) {
+    public Optional<Execution> findById(String tenantId, String id, boolean allowDeleted) {
         return jdbcRepository
             .getDslContextWrapper()
             .transactionResult(configuration -> {
@@ -128,7 +128,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     .using(configuration)
                     .select(field("value"))
                     .from(this.jdbcRepository.getTable())
-                    .where(this.defaultFilter(tenantId))
+                    .where(this.defaultFilter(tenantId, allowDeleted))
                     .and(field("key").eq(id));
 
                 return this.jdbcRepository.fetchOne(from);
@@ -139,7 +139,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
     protected Condition statesFilter(List<State.Type> state) {
         return field("state_current")
-            .in(state.stream().map(Enum::name).collect(Collectors.toList()));
+            .in(state.stream().map(Enum::name).toList());
     }
 
     @Override
@@ -172,7 +172,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     state,
                     labels,
                     triggerExecutionId,
-                    childFilter
+                    childFilter,
+                    false
                 );
 
                 return this.jdbcRepository.fetchPage(context, select, pageable);
@@ -190,7 +191,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
         @Nullable List<State.Type> state,
         @Nullable Map<String, String> labels,
         @Nullable String triggerExecutionId,
-        @Nullable ChildFilter childFilter
+        @Nullable ChildFilter childFilter,
+        boolean deleted
     ) {
         return Flux.create(
             emitter -> this.jdbcRepository
@@ -209,7 +211,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                         state,
                         labels,
                         triggerExecutionId,
-                        childFilter
+                        childFilter,
+                        deleted
                     );
 
                     select.fetch()
@@ -233,7 +236,8 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
         @Nullable List<State.Type> state,
         @Nullable Map<String, String> labels,
         @Nullable String triggerExecutionId,
-        @Nullable ChildFilter childFilter
+        @Nullable ChildFilter childFilter,
+        boolean deleted
     ) {
         SelectConditionStep<Record1<Object>> select = context
             .select(
@@ -241,7 +245,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
             )
             .hint(context.configuration().dialect() == SQLDialect.MYSQL ? "SQL_CALC_FOUND_ROWS" : null)
             .from(this.jdbcRepository.getTable())
-            .where(this.defaultFilter(tenantId));
+            .where(this.defaultFilter(tenantId, deleted));
 
         select = filteringQuery(select, namespace, flowId, null, query, labels, triggerExecutionId, childFilter);
 
@@ -329,7 +333,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return dailyStatisticsQueryMapRecord(
             results.resultsOrRows()
-                .get(0)
+                .getFirst()
                 .result(),
             startDate,
             endDate,
@@ -368,7 +372,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return dailyStatisticsQueryMapRecord(
             results.resultsOrRows()
-                .get(0)
+                .getFirst()
                 .result(),
             startDate,
             endDate,
@@ -401,7 +405,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
             .stream()
             .map(dateResultEntry -> dailyExecutionStatisticsMap(dateResultEntry.getKey(), dateResultEntry.getValue(), groupByType.val()))
             .sorted(Comparator.comparing(DailyExecutionStatistics::getStartDate))
-            .collect(Collectors.toList()), startDate, endDate);
+            .toList(), startDate, endDate);
     }
 
     private Results dailyStatisticsQueryForAllTenants(
@@ -545,7 +549,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     .map(e -> field("namespace").eq(e.getNamespace())
                         .and(field("flow_id").eq(e.getId()))
                     )
-                    .collect(Collectors.toList())
+                    .toList()
             ));
         }
 
@@ -586,7 +590,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
 
         return results
             .resultsOrRows()
-            .get(0)
+            .getFirst()
             .result()
             .intoGroups(field("namespace", String.class))
             .entrySet()
@@ -753,7 +757,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                             field("namespace").eq(flow.getNamespace()),
                             field("flow_id").eq(flow.getFlowId())
                         ))
-                        .collect(Collectors.toList())
+                        .toList()
                 ));
 
                 // map result to flow
@@ -764,7 +768,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     ))
                     .fetchMany()
                     .resultsOrRows()
-                    .get(0)
+                    .getFirst()
                     .result()
                     .stream()
                     .map(record -> new ExecutionCount(
@@ -772,7 +776,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                         record.getValue("flow_id", String.class),
                         record.getValue("count", Long.class)
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
             });
 
         // fill missing with count at 0
@@ -790,7 +794,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                     0L
                 ))
             )
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<Execution> lastExecutions(
@@ -822,7 +826,7 @@ public abstract class AbstractJdbcExecutionRepository extends AbstractJdbcReposi
                                 field("namespace").eq(flow.getNamespace()),
                                 field("flow_id").eq(flow.getId())
                             ))
-                            .collect(Collectors.toList())
+                            .toList()
                     ));
 
                 Table<Record2<Object, Integer>> cte = subquery.asTable("cte");
